# fagent

./: .gitignore  README.md  bot_consumer.py  bot_producer.py  consumer.py  file_tools.py  main.py  memo_tools.py  pyproject.toml  system_prompt.md  tmux_tools.py  tmux_tools_schema.py  tools.py
fagent/: __main__.py  bot_consumer.py  consumer.py  file_tools.py  file_tools_schema.py  image_tools.py  image_tools_schema.py  memo_tools_schema.py  producers.py  queue_utils.py  sleep_tool_schema.py  tools.py  utils.py
src/fagent/: __init__.py  __main__.py  bot_consumer.py  bot_producer.py  consumer.py  file_tools.py  file_tools_schema.py  main.py  producers.py  sleep_tool.py  tmux_tools.py  tmux_tools_schema.py
